# docs/swagger.json
@@ -415,11 +415,17 @@
                 "torrentDownloadConcurrencyLimit": {
                     "type": "integer"
                 },
+                "torrentDownloadDisabled": {
+                    "type": "boolean"
+                },
                 "torrentFilesExpireHour": {
                     "type": "integer"
                 },
                 "torrentFilesServingConcurrencyLimit": {
                     "type": "integer"
+                },
+                "torrentFilesServingDisabled": {
+                    "type": "boolean"
                 }
             }
         },
